# ImageClassifier

./: CMakeLists.txt
assets/svm/: dictionary.yml
assets/test/: Thumbs.db
assets/test2/: Thumbs.db
assets/train/: Thumbs.db
svm/: Source.cpp  Utilities.cpp  Utilities.h
